--- a/style.css
+++ b/style.css
@@ -1,25 +1,76 @@
 .container {
     display: flex;
-    height: 200px;
+    font-size: 3em;
     background: yellow;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5em;
+    
 }
 
-.container::before, 
-.container::after {
-    content: "";
-    display: block;
-    height: 5px;
-    /* width: 200px; */
-    flex: 1;
-    background: linear-gradient(to left, red,white);
-    margin-right: .5em;
+.item {
+    background: pink;
+    /* flex-grow: 10; */
+    /* flex-grow: 0.5; */
+    /* flex-grow indica el factor de crecimiento
+    el navegadro divide el espacio disponible entre la cantidad
+    total de factores de crecimiento y se los
+    asigna a los items */
 }
 
-.container::after {
-    background: linear-gradient(to right, red, white);
-    margin-right: 0;
-    margin-left: .5em;
+.item:nth-child(3){
+    flex-grow: 4;
+}
+
+/* Cantidad total de flex-grow:
+1
+1
+4
+1
+1 
+= 8
+
+calcular factor de crecimiento:
+espacio disponible / 8
+
+suponiendo que el espacio disponible 
+sea : 160 , 160 / 8 = 20
+
+teniendo el facor de crecimiento el valor lo multiplica por 
+el valor de flex-grow en cada caso
+y lo suma.
+
+    1 * 20 = 20
+    1 * 20 = 20
+    4 * 20 = 80
+    1 * 20 = 20
+
+    Ese valor se suma al tamaño original.
+    Suponiendo que sus tamaños originales sea:
+
+        20 + 20 = 40
+        10 + 20 = 30
+        100 + 80 = 180
+        30 + 20 = 50
+        15 + 20 = 180
+    
+*/
+
+.item:nth-child(even) {
+    background: cyan;
+}
+
+.page {
+    display: flex;
+    height: 100vh;
+    background: yellow;
+
+}
+
+.aside {
+    width: 200px;
+    background: red;
+    
+}
+
+.main {
+    background: green;
+    flex-grow: 1;
 }
