--- a/style.css
+++ b/style.css
@@ -1,35 +1,37 @@
-.container {
+
+* {
+    box-sizing: border-box;
+}
+body {
     display: flex;
-    font-size: 1.5em;
-    background: yellow;
-    height: 300px;
-    flex-wrap: wrap;
+    min-height: 100vh;
 }
 
-.item {
-    background: pink;
-    height: 100px;
-    width: 100px;
-    margin: 20px;
+.card {
+    margin: auto;
+    width: 80%;
+    position: relative;
 }
 
-
-
-.item:nth-child(even) {
-    background: cyan;
+.card__poster {
+    width: 100%;
+    
 }
 
-/* .item:first-child {
-    order: -2;
+.card__title {
+    position: absolute;
+    padding: 1em;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.8);
+    margin: 0;
+    color: #fff;
+     /* Centrado absoluto */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
 }
-
-.item:nth-child(3) {
-    order: -1;
-
-} */
-
-.discount {
-    border: 2px solid red;
-    order: -1;
-}
-
