--- a/style.css
+++ b/style.css
@@ -2,36 +2,54 @@
 * {
     box-sizing: border-box;
 }
-body {
-    display: flex;
-    min-height: 100vh;
+
+/*reset elements*/
+
+.menu {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-.card {
-    margin: auto;
-    width: 80%;
-    position: relative;
-}
-
-.card__poster {
-    width: 100%;
-    
-}
-
-.card__title {
-    position: absolute;
-    padding: 1em;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,.8);
-    margin: 0;
+.menu__link {
+    text-decoration: none;
     color: #fff;
-     /* Centrado absoluto */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
 
-    text-align: center;
+/* Layout basico */
+.menu {
+    width: 50%;
+    background: #333;
+
+}
+
+.menu__item {
+    border-bottom: 1px solid #222;
+}
+
+.menu__item:hover {
+  background: rgba(0,0,0,.5);  
+}
+
+.menu__link {
+    display: block;
+    padding: .5em 1em;
+}
+
+/* Agregando flexbox */
+@media  screen and (min-width: 960px){
+    .menu{
+        display: flex;
+        width: 100%;
+    }
+
+    .menu__item {
+        flex: 1;
+        border-bottom: none;
+        border-right: 1px solid #222;
+    }
+    .menu__link {
+        text-align: center;
+    }
 }
