SOLUCIONAR ELEMENTOS APLASTADOS
ejercicio realizado en la clase solucionar elmentos aplastatdos

--- a/style.css
+++ b/style.css
@@ -1,56 +1,17 @@
-
 * {
     box-sizing: border-box;
 }
 
-/*reset elements*/
-
-.banner {
-    display: flex;
+.header {
     background: yellow;
-    height: 300px;
-
-}
-
-.banner__item{
-    flex: 1;
-    color: #fff;
+    font-size: 5em;
     font-weight: bold;
-    font-style: 1.2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: flex-grow 1s;
 
+    display: inline-flex;
+    height: 400px;
+    /* align-items: center; */
 }
 
-.banner__item:hover {
-    flex-grow: 10;
-}
-
-.banner__item:hover .banner__title{
-    transform: rotate(0);
-   
-}
-
-.banner__item:nth-child(1){
-    background: hsl(90, 100%, 40%);
-}
-.banner__item:nth-child(2){
-    background: hsl(30, 100%, 40%);
-
-}
-.banner__item:nth-child(3){
-    background: hsl(268, 100%, 40%);
-    
-}
-.banner__item:nth-child(4){
-    background: hsl(60, 16%, 76%);
-    
-}
-
-.banner__title{
+.header p {
     margin: 0;
-    transform: rotate(-90deg);
-    transition: transform 0.5s 0.5s;
 }
